<resources>
    <string name="app_name">Zerotier Fix</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="custom_dns">DNS Servers</string>
    <string name="custom_dns_tab_title">Custom DNS</string>
    <string name="default_route">Route all traffic through ZeroTier. (Requires external configuration of the network)</string>
    <string name="delete_network">Delete</string>
    <string name="device_label">Device:</string>
    <string name="dns_label_string">DNS</string>
    <string name="dnsv4">IPv4 DNS</string>
    <string name="dnsv6">IPv6 DNS</string>
    <string name="ip_addresses_label">IP Addresses</string>
    <string name="join_network">Add Network</string>
    <string name="leave_button_text">Leave Network</string>
    <string name="load_planet">Load Planet</string>
    <string name="load_planet_summary">You will need to disconnect and reconnect for this setting to take effect.</string>
    <string name="mac_label">MAC:</string>
    <string name="menu_join_network">Add Network</string>
    <string name="network_bridging">Bridging</string>
    <string name="network_broadcast">Broadcast</string>
    <string name="network_default_route">Route Via ZeroTier</string>
    <string name="network_dns_tab_title">Network DNS</string>
    <string name="network_dns_text">DNS configuration managed by network controller.</string>
    <string name="network_id">Network ID:</string>
    <string name="network_id_string">Network ID:</string>
    <string name="network_ips">Managed IPs</string>
    <string name="network_mac">MAC</string>
    <string name="network_mtu">MTU</string>
    <string name="network_dns_mode">DNS Mode</string>
    <string name="network_dns_mode_no_dns">No DNS</string>
    <string name="network_dns_mode_network_dns">Network DNS</string>
    <string name="network_dns_mode_custom_dns">Custom DNS</string>
    <string name="network_name">Network Name:</string>
    <string name="network_name_string">Network Name:</string>
    <string name="network_status">Status</string>
    <string name="network_status_not_connected">Not Connected</string>
    <string name="network_status_access_denied">Access Denied</string>
    <string name="network_status_client_too_old">Client Out of Date</string>
    <string name="network_status_not_found">Network Not Found</string>
    <string name="network_status_ok">OK</string>
    <string name="network_status_port_error">Port Error</string>
    <string name="network_status_requesting_configuration">Requesting Configuration</string>
    <string name="network_status_unknown">Unknown</string>
    <string name="network_status_authentication_required">Authentication Required</string>
    <string name="network_list_status_connected">Connected</string>
    <string name="network_list_status_disconnected">Disconnected</string>
    <string name="notification_channel_vpn_service">ZeroTier VPN Service</string>
    <string name="notification_vpn_connecting">VPN connecting…</string>
    <string name="notification_vpn_connected">VPN connected</string>
    <string name="network_type">Type</string>
    <string name="network_type_label">Type:</string>
    <string name="network_type_private">Private</string>
    <string name="network_type_public">Public</string>
    <string name="network_type_unknown">Unknown</string>
    <string name="no_dns_tab_title">No DNS</string>
    <string name="no_dns_text">DNS settings will not be configured.</string>
    <string name="planet_settings">Planet Settings</string>
    <string name="preferences_general">General Settings</string>
    <string name="preferences_general_start_on_boot">Start ZeroTier Fix on Device Startup</string>
    <string name="preferences_network">Network Settings</string>
    <string name="preferences_network_auto_rejoin">Automatically Re-join Networks on Start</string>
    <string name="preferences_network_disable_ipv6">Disable IPv6</string>
    <string name="preferences_network_disable_ipv6_summary">You will need to disconnect &amp; reconnect for this setting to take effect.</string>
    <string name="preferences_network_use_cell_data">Use Cellular Data</string>
    <string name="preferences_network_auto_rebuild">Enable auto rebuild on network change</string>
    <string name="preferences_network_auto_rebuild_summary">For troubleshooting: when disabled, Wi-Fi/4G switch will not auto-trigger VPN route rebuild. Reconnect or manually update config to apply changes.</string>
    <string name="preferences_network_forward_hotspot_traffic">Forward hotspot/USB/Bluetooth downstream traffic via ZeroTier</string>
    <string name="preferences_network_forward_hotspot_traffic_summary">When enabled, downstream shared-subnets (softap/rndis/bt-pan) are no longer excluded from VPN routes, so return traffic can pass through ZeroTier.</string>
    <string name="preferences_network_smart_routing_enabled">Enable smart routing enhancement</string>
    <string name="preferences_network_smart_routing_enabled_summary">When disabled, CHINA_DIRECT/GFW smart split is turned off and routing falls back closer to original fork behavior (reconnect required).</string>
    <string name="reset_planet">Reset Planet</string>
    <string name="settings">Settings</string>
    <string name="status_label">Status:</string>
    <string name="title_activity_zero_tier_one__main">ZeroTier Fix</string>
    <string name="use_custom_dns">Use Custom DNS Servers</string>
    <string name="status_offline">OFFLINE</string>
    <string name="status_online">ONLINE</string>
    <string name="toast_no_network">No Network Connectivity.  ZeroTier cannot start.</string>
    <string name="toast_mobile_data">Currently using mobile data.  Enable \"Use Cellular Data\" in order to start ZeroTier.</string>
    <string name="menu_peers">Peers</string>
    <string name="menu_orbit">Orbit</string>
    <string name="menu_logs">Logs</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="moon_world_id">Moon World ID:</string>
    <string name="moon_seed">Moon Seed:</string>
    <string name="moon_orbit_activity">Moon Orbit</string>
    <string name="delete_moon_orbit">Delete</string>
    <string name="moon_seed_hint">Moon Seed is an arbitrary node that holds Moon information. If you are not sure, it can be the same as Moon World ID.</string>
    <string name="moon_orbit_info">Moon Orbit Information</string>
    <string name="add">Add</string>
    <string name="no_data">No data</string>
    <string name="moon_world_id_wrong_format">Moon World ID has wrong format!</string>
    <string name="moon_seed_wrong_format">Moon Seed has wrong format!</string>
    <string name="moon_orbit_exist">Moon Orbit information exists!</string>
    <string name="moon_orbit_add_success">Moon orbit added successfully.</string>
    <string name="moon_orbit_delete_success">Moon orbit deleted successfully. Disconnect &amp; reconnect for this setting to take effect.</string>
    <string name="unknown_version" translatable="false">-.-.-</string>
    <string name="network_connected">Connected</string>
    <string name="connected_to_network">Connected to %s</string>
    <string name="network_detail">Network Detail</string>
    <string name="peer_address">Peer Address:</string>
    <string name="peer_role">Role:</string>
    <string name="peer_client_version">Client version:</string>
    <string name="peer_latency">Latency:</string>
    <string name="peer_preferred_path">Preferred path:</string>
    <string name="invalid_ipv4_dns">Invalid IPv4 DNS address.</string>
    <string name="invalid_ipv6_dns">Invalid IPv6 DNS address</string>
    <string name="peer_no_connection">No connection</string>
    <string name="peer_list">Peer List</string>
    <string name="peer_role_planet">Planet</string>
    <string name="peer_role_leaf">Leaf</string>
    <string name="peer_role_moon">Moon</string>
    <string name="peer_lat" translatable="false">%d ms</string>
    <string name="fail_retrieve_peer_list">Failed to retrieve peer info. Please check your network connection.</string>
    <string name="peer_relay">Relay</string>
    <string name="click_to_add_network">Click + to add network</string>
    <string name="copy_network_id_to_clipboard">Copy Network ID to Clipboard</string>
    <string name="text_copied">Text copied</string>
    <string name="copy_moon_world_id_to_clipboard">Copy Moon World ID to clipboard</string>
    <string name="use_custom_planet">Use Custom Planet</string>
    <string name="load_planet_file">Load planet file</string>
    <string name="enter_planet_file_url">Enter planet file url:</string>
    <string name="file">File</string>
    <string name="import_via_file">Import via file</string>
    <string name="url">URL</string>
    <string name="import_via_url">Import via URL</string>
    <string name="cannot_open_planet">Cannot open planet file.</string>
    <string name="cannot_open_moon">Cannot open moon file.</string>
    <string name="set_planet_file">Set planet file</string>
    <string name="wrong_url_format">Wrong url format</string>
    <string name="cannot_download_planet_file">Cannot download planet file</string>
    <string name="set_planet_succ">Set custom planet file successfully.</string>
    <string name="planet_wrong_format">Wrong planet file format</string>
    <string name="downloading">Downloading</string>
    <string name="planet_download_timeout">Timeout when downloading planet file</string>
    <string name="planet_use_custom_summary">Allows you to bypass Zerotier official network. Reconnect for this setting to take effect.</string>
    <string name="import_via_orbit">Import via Orbit</string>
    <string name="import_moon_node">Import Moon node</string>
    <string name="wait_to_fetch">Wait to fetch</string>
    <string name="config_file">Config file</string>
    <string name="delete_cache">Delete cache</string>
    <string name="external_file">External file</string>
    <string name="cached">Cached</string>
    <string name="moon_wrong_file_format">Wrong moon file format</string>
    <string name="moon_world_id_hint">Zerotier address of Moon node. Also filename of its moon file.</string>
    <string name="cached_moon_file_delete">Cached moon file deleted. Reconnect for this setting to take effect.</string>
    <string name="channel_name">Connection Status Notify</string>
    <string name="channel_description">Connection Status</string>
    <string name="notification_title_connecting">ZeroTier Fix</string>
    <string name="notification_text_connecting">Connecting…</string>
    <string name="notification_title_connected">Connected</string>
    <string name="notification_text_connected">Connected to: %1$s</string>
    <string name="toast_vpn_application_not_prepared">VPN application is not prepared or is revoked.</string>
    <string name="toast_network_status_ok">Successfully connected to network %1$s</string>
    <string name="toast_network_status_access_denied">Cannot connect to network %1$s: Access denied</string>
    <string name="toast_network_status_not_found">Cannot connect to network %1$s: Network does not exist</string>
    <string name="toast_network_status_port_error">Cannot connect to network %1$s: Port error</string>
    <string name="toast_network_status_client_too_old">Cannot connect to network %1$s: Client version too low</string>
    <string name="logs_empty">No logs available</string>
    <string name="logs_copy">Copy logs</string>
    <string name="logs_share">Share logs</string>
    <string name="add_apps">Add Apps</string>
    <string name="no_apps_selected">No apps selected. Tap "Add Apps" to select applications.</string>
    <string name="selected_apps_count">Selected: %d apps</string>
    <string name="routing_configuration_section">Routing Configuration</string>
    <string name="routing_all_traffic">Route All Traffic</string>
</resources>