<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/planet_settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="planet_use_custom"
            android:summary="@string/planet_use_custom_summary"
            android:title="@string/use_custom_planet" />
        <Preference
            android:key="set_planet_file"
            android:title="@string/set_planet_file" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_network">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="network_use_cellular_data"
            android:title="@string/preferences_network_use_cell_data" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="network_disable_ipv6"
            android:summary="@string/preferences_network_disable_ipv6_summary"
            android:title="@string/preferences_network_disable_ipv6" />
    </PreferenceCategory>
    
    <!-- 代理功能已移除 -->
    <!-- 
    <PreferenceCategory android:title="@string/proxy_settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="proxy_enabled"
            android:title="@string/proxy_enable"
            android:summary="@string/proxy_enable_summary" />
        <ListPreference
            android:defaultValue="0"
            android:dependency="proxy_enabled"
            android:entries="@array/proxy_type_entries"
            android:entryValues="@array/proxy_type_values"
            android:key="proxy_type"
            android:title="@string/proxy_type" />
        <EditTextPreference
            android:dependency="proxy_enabled"
            android:key="proxy_host"
            android:title="@string/proxy_host" />
        <EditTextPreference
            android:dependency="proxy_enabled"
            android:key="proxy_port"
            android:inputType="number"
            android:title="@string/proxy_port" />
        <EditTextPreference
            android:dependency="proxy_enabled"
            android:key="proxy_username"
            android:title="@string/proxy_username" />
        <EditTextPreference
            android:dependency="proxy_enabled"
            android:key="proxy_password"
            android:inputType="textPassword"
            android:title="@string/proxy_password" />
    </PreferenceCategory>
    -->
</PreferenceScreen>
