<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/network_detail_network_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/network_id"
            android:textColor="?attr/greyText"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/network_detail_network_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:paddingRight="4dp"
            android:text="@string/network_name"
            android:textColor="?attr/greyText" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:columnCount="2"
        android:gravity="end"
        android:orientation="horizontal"
        android:stretchColumns="1">

        <!-- IP Addresses moved here from bottom -->
        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingLeft="40dp"
                android:paddingRight="20dp"
                android:text="@string/network_ips" />

            <TextView
                android:id="@+id/network_ipaddresses_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="" />
        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingLeft="40dp"
                android:paddingRight="20dp"
                android:text="@string/network_type" />

            <TextView
                android:id="@+id/network_type_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="" />
        </TableRow>

        <!-- Network Properties Section -->
        <TableRow android:layout_width="match_parent"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingLeft="40dp"
                android:paddingRight="20dp"
                android:text="@string/network_mac" />

            <TextView
                android:id="@+id/network_mac_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="" />
        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingLeft="40dp"
                android:paddingRight="20dp"
                android:text="@string/network_mtu" />

            <TextView
                android:id="@+id/network_mtu_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="" />
        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingLeft="40dp"
                android:paddingRight="20dp"
                android:text="@string/network_broadcast" />

            <TextView
                android:id="@+id/network_broadcast_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="" />
        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingLeft="40dp"
                android:paddingRight="20dp"
                android:text="@string/network_bridging" />

            <TextView
                android:id="@+id/network_bridging_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="" />
        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingLeft="40dp"
                android:paddingRight="20dp"
                android:text="@string/network_dns_mode" />

            <TextView
                android:id="@+id/network_dns_mode_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="" />
        </TableRow>

        <!-- Routing Configuration Section -->
        <TableRow android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:background="?attr/tableRowGrey">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:paddingLeft="40dp"
                android:paddingTop="8dp"
                android:paddingRight="20dp"
                android:paddingBottom="8dp"
                android:text="@string/routing_configuration_section"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:paddingLeft="40dp"
                android:paddingRight="20dp"
                android:text="@string/routing_all_traffic" />

            <CheckBox
                android:id="@+id/network_routing_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="" />
        </TableRow>

    </TableLayout>

    <!-- App Routing Fragment Container -->
    <FrameLayout
        android:id="@+id/app_routing_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:columnCount="2"
        android:gravity="end"
        android:orientation="horizontal"
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/custom_dns_row"
            android:layout_width="match_parent"
            android:background="?attr/tableRowGrey">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_span="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:gravity="end"
                    android:text="@string/custom_dns"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/network_dns_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="end"
                    android:text="" />
            </LinearLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>
